Made runnable using maven command line

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 	</dependencies>
 
 	<properties>
+		<start-class>service.SequenceService</start-class>
 		<java.version>1.8</java.version>
 	</properties>
 
